# tessiture

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  dev-deployment-checklist.md  improvements.patch  pyproject.toml  requirements.txt  tessiture-integration-guide.md  tessiture-review.md  tessiture_design_plan.md  tessiture_kilo_reference.md  test.env
.forgejo/workflows/: hello_world.yml  hello_world.yml.old  mirror-github.yml  release.yml  test.yml
analysis/: __init__.py
analysis/advanced/: __init__.py  formants.py  phrase_segmentation.py  vibrato.py
analysis/chords/: __init__.py  _viterbi_shared.py  detector.py  key_detector.py  key_smoother.py  pitch_class_histogram.py  templates.py  temporal_smoother.py  tonal_profiles.py
analysis/comparison/: __init__.py  alignment.py  formant_comparison.py  pitch_comparison.py  range_comparison.py  reference_cache.py  rhythm_comparison.py  session_report.py
analysis/dsp/: __init__.py  peak_detection.py  preprocessing.py  stft.py  vocal_separation.py
analysis/pitch/: __init__.py  (+3 more)
api/: __init__.py  analysis_core.py  api_router.py  config.py  evidence.py  job_manager.py  logging_config.py  pitch_utils.py  routes.py  serializers.py  server.py  stats.py  streaming.py  utils.py
deploy/: .env  .env.ci  .env.example  cloudflared-compose.yml  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  MATHEMATICAL_FOUNDATIONS.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
icons/: tess_gen.py  tess_gen_v2.py
patches/: fix-dind-tls.patch  frontend-tests.patch  tessiture.patch
plans/: BEGINNER_UX_IMPROVEMENT_PLAN.md  BUILDKIT_CACHE_PLAN.md  COVERAGE_ANALYSIS.md  DSP_AUDIO_VOCAL_AUDIT.md  MASTER_IMPLEMENTATION_PLAN.md  MATHEMATICAL_DERIVATIONS.md  PHASE2_SPECTROGRAM_INSPECTOR_SPEC.md  SCIENTIFIC_REVIEW.md
reporting/: __init__.py  _helpers.py  csv_generator.py  json_generator.py  pdf_composer.py  visualization.py
tessiture-fixes/: install.sh
tests/: __init__.py
(+95 files in other folders)
