[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "tessiture"
dynamic = ["version"]
description = "Tessiture vocal analysis toolkit"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Tessiture Team" }
]
dependencies = [
  "numpy==1.26.4",
  "scipy==1.12.0",
  "librosa==0.10.2.post1",
  "pyDOE2==1.3.0",
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "matplotlib==3.8.4",
  "plotly==5.24.1",
  "reportlab==4.2.5"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3",
  "httpx==0.28.1",
  "black==24.10.0",
  "mypy==1.15.0",
  "ruff==0.9.10"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:ast.NameConstant is deprecated and will be removed in Python 3.14; use ast.Constant instead:DeprecationWarning:reportlab\\.lib\\.rl_safe_eval",
  "ignore:'parseString' deprecated - use 'parse_string':pyparsing.exceptions.PyparsingDeprecationWarning:matplotlib\\._fontconfig_pattern",
  "ignore:'resetCache' deprecated - use 'reset_cache':pyparsing.exceptions.PyparsingDeprecationWarning:matplotlib\\._fontconfig_pattern",
  "ignore:'enablePackrat' deprecated - use 'enable_packrat':pyparsing.exceptions.PyparsingDeprecationWarning:matplotlib\\._mathtext",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "api", "calibration", "reporting"]